--- a/AboutPageAssets/styles/aboutPageStyle.css
+++ b/AboutPageAssets/styles/aboutPageStyle.css
@@ -403,6 +403,17 @@ header .profileContainer {
     text-decoration: none;
     font-size: 16px;
 }
+.section2 .sectionTitle a {
+  font-family: inherit;
+  text-decoration: none;
+  color: inherit;
+  font-size: inherit;
+}
+
+.section2 .sectionTitle a:hover {
+  color: #005f8f;
+}
+
 .section2 .sectionTitleRule {
 	margin: 0 3% 0 0;
 	float: left;
